src/corelib/kernel/qmetatype.h
@@ -113,6 +113,7 @@ public:
 #endif
     static int registerType(const char *typeName, Destructor destructor,
                             Constructor constructor);
+    static int registerTypedef(const char *typeName, int aliasId);
     static int type(const char *typeName);
     static const char *typeName(int type);
     static bool isRegistered(int type);
@@ -154,13 +155,31 @@ void qMetaTypeLoadHelper(QDataStream &stream, T *t)
 }
 #endif // QT_NO_DATASTREAM
 
+template <typename T> struct QMetaTypeId2;
+
+namespace QtPrivate {
+    template <typename T, bool Defined = QMetaTypeId2<T>::Defined>
+    struct QMetaTypeIdHelper {
+        static inline int qt_metatype_id()
+        { return QMetaTypeId2<T>::qt_metatype_id(); }
+    };
+    template <typename T> struct QMetaTypeIdHelper<T, false> {
+        static inline int qt_metatype_id()
+        { return -1; }
+    };
+}
+
 template <typename T>
 int qRegisterMetaType(const char *typeName
 #ifndef qdoc
-    , T * /* dummy */ = 0
+    , typename QMetaTypeId2<T>::CustomType * dummy = 0
 #endif
 )
 {
+    const int typedefOf = dummy ? -1 : QtPrivate::QMetaTypeIdHelper<T>::qt_metatype_id();
+    if (typedefOf != -1)
+        return QMetaType::registerTypedef(typeName, typedefOf);
+
     typedef void*(*ConstructPtr)(const T*);
     ConstructPtr cptr = qMetaTypeConstructHelper<T>;
     typedef void(*DeletePtr)(T*);
@@ -169,6 +188,17 @@ int qRegisterMetaType(const char *typeName
     return QMetaType::registerType(typeName, reinterpret_cast<QMetaType::Destructor>(dptr),
                                    reinterpret_cast<QMetaType::Constructor>(cptr));
 }
+
+template <typename T>
+int qRegisterMetaType(const char *typeName
+#ifndef qdoc
+    , typename QMetaTypeId2<T>::BuiltinType * /* dummy */ = 0
+#endif
+)
+{
+    return QMetaType::registerTypedef(typeName, QMetaTypeId2<T>::MetaType);
+}
+
 
 #ifndef QT_NO_DATASTREAM
 template <typename T>
@@ -198,6 +228,7 @@ struct QMetaTypeId
 template <typename T>
 struct QMetaTypeId2
 {
+    typedef T CustomType;
     enum { Defined = QMetaTypeId<T>::Defined };
     static inline int qt_metatype_id() { return QMetaTypeId<T>::qt_metatype_id(); }
 };
@@ -254,7 +285,8 @@ inline int qRegisterMetaTypeStreamOperators()
             {                                                           \
                 static QBasicAtomicInt metatype_id = Q_BASIC_ATOMIC_INITIALIZER(0); \
                 if (!metatype_id)                                       \
-                    metatype_id = qRegisterMetaType< TYPE >(#TYPE);     \
+                    metatype_id = qRegisterMetaType< TYPE >(#TYPE,      \
+                               reinterpret_cast< TYPE *>(quintptr(-1))); \
                 return metatype_id;                                     \
             }                                                           \
     };                                                                  \
@@ -264,6 +296,7 @@ inline int qRegisterMetaTypeStreamOperators()
     QT_BEGIN_NAMESPACE \
     template<> struct QMetaTypeId2<TYPE> \
     { \
+        typedef TYPE BuiltinType; \
         enum { Defined = 1, MetaType = QMetaType::NAME }; \
         static inline int qt_metatype_id() { return QMetaType::NAME; } \
     }; \
